# agon-python

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  Makefile  README.md  codecov.yml  index.html  mkdocs.yml  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  publish.yml
api/: index.html
benchmarks/: index.html
concepts/: index.html
crates/agon-core/: Cargo.toml
crates/agon-core/src/: error.rs  lib.rs  types.rs  utils.rs
crates/agon-core/src/formats/: columns.rs  mod.rs  rows.rs  struct_fmt.rs  text.rs
devtools/: lint_python.py  lint_rust.py
docs/: api.md  benchmarks.md  concepts.md  index.md
docs/formats/: columns.md  json.md  rows.md  struct.md
docs/javascripts/: charts.js
formats/columns/: index.html
formats/json/: index.html
formats/rows/: index.html
formats/struct/: index.html
formats/text/: index.html
python/agon/: __init__.py  core.py
search/: search_index.json
src/agon/: __init__.py  core.py  errors.py
src/agon/formats/: __init__.py  base.py  columns.py  struct.py  text.py
tests/: conftest.py  test_benchmarks.py  test_columns.py  test_core.py  test_rows.py  test_struct.py  test_text.py
tests/data/: chart.json  gainers.json  historical.json  quote.json  scars.json
