[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Harvey Tseng <harveytseng2@gmail.com>"]
repository = "https://github.com/Verdenroz/agon-python"

[workspace.dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
rayon = "1.10"
thiserror = "2.0"
regex = "1.11"
tiktoken-rs = "0.9.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
