[package]
name = "agon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust core for AGON encoding formats"

[lib]
name = "agon_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
thiserror.workspace = true
regex.workspace = true
tiktoken-rs.workspace = true
